templates/Sparkle/assets/css/main.css
/* ... */
table thead th, table th {
	border-bottom: 1px solid #d1d5d8;
	height: 25px;
	padding: 5px 0 5px 8px;
	background-color: #e9edf0;
	font-weight: 700;
}

table tr.section:not(:first-child) th {
	border-top: 1px solid #d1d5d8;
}

table tbody tr td {
	border-bottom:1px solid #f1f2f3;
}
table tbody tr:last-child td {
	border-bottom: none;
}

table.hl tbody tr:hover {
	background-color: #f5f5f5;
}

table tfoot tr td {
	height:25px;
	border-top:1px solid #d1d5d8;
	background-color:#f2f8fa;
	padding-right: 0px;
}

table td {
	padding: 5px 10px;
	height: 25px;
    min-height: 25px;
}

table label {
	display: block;
	clear: both;
}

table th.right, table td.right {
	text-align: right;
}

table.tiny {
	width: 400px;
}
table.middle {
	width: 600px;
}
table.full {
	width: 100%;
}
table.center {
	margin: 0 auto;
}
table tr.top {
	vertical-align: top;
}
tr.disabled td, tr.disabled td a {
	color:#cfcfcf;
}

/* ADMIN/CUSTOMER BARS */
.overviewcustomerextras {
	line-height:15px;
	font-size:10px;
	width:250px;
	padding-top:3px;
	padding-bottom:3px;
}

.overviewcustomerextras span {
	width:60px;
	float:left;
}

/* INPUT ELEMENTS */
input {
	background:#fff url(../img/icons/text_align_left.png) no-repeat 5px 4px;
	color: #333;
	padding:1px 4px 2px 24px;
	height:23px;
	border:1px solid #d9d9d9;
	margin-bottom:5px;
	border-radius:3px;
}

textarea {
	background:#fff url(../img/icons/text_align_left.png) no-repeat 5px 4px;
	color: #333;
	padding:4px 4px 2px 24px;
	border:1px solid #d9d9d9;
	margin: 5px 0 5px 0;
	border-radius:3px;
}

input[type="text"],input[type="password"] {
	width:400px;
	margin-top: 5px;
}

input[type="password"] {
	background:#fff url(../img/icons/lock.png) no-repeat 5px 4px;
}

/*
 *  BUTTONS
 */
input[type="button"],input[type="submit"],input[type="reset"] {
	margin:0 5px;
	padding:5px 14px;
	outline:0;
	border:0;
	background-color:#eee;
	min-width:80px;
	height:28px;
	background-image:none;
	border-width:0;
}

.loginsec input[type="button"],.loginsec input[type="submit"],.loginsec input[type="reset"] {
	margin:0 1px;
}

input[type="button"]:hover,input[type="submit"]:hover,input[type="reset"]:hover {
	color:#333;
	background-color:#dcdcdc;
}

input[type="button"]:active,input[type="submit"]:active,input[type="reset"]:active {
	-webkit-box-shadow:inset 0 1px 8px rgba(0,0,0,0.25);
	-moz-box-shadow:inset 0 1px 8px rgba(0,0,0,0.25);
	box-shadow:inset 0 1px 8px rgba(0,0,0,0.25);
	color:#fff!important;
}

input[type="submit"],input[class="yesbutton"] {
	color:#fff;
	background-color:#35aa47;
}

input[type="submit"]:hover,input[class="yesbutton"]:hover {
	color:#fff;
	background-color:#1d943b;
}

input[class="submit"]:active,input[class="yesbutton"]:active {
	background-color:#35aa47;
}

input[class="nobutton"],input[type="reset"] {
	color:#fff;
	background-color:#d84a38;
}

input[class="nobutton"]:hover,input[type="reset"]:hover {
	color:#fff;
	background-color:#c53727;
}

input[class="nobutton"]:active,input[type="reset"]:active {
	background-color:#dd4b39;
}

input[type="checkbox"] {
	background:#dae7ee;
	padding:0;
	margin:0 5px 0 0;
	vertical-align:middle;
	height:26px;
}

select {
	padding:6px 4px 7px 24px;
	color: #333;
	border:1px solid #d9d9d9;
	margin:5px 5px 5px 0;
	border-radius:3px;
	background: url(../img/icons/down.png) no-repeat 9px;
	-webkit-appearance:none;
	-moz-appearance:none;
	appearance:none;
	min-width:170px;
	text-indent:0.01px;
	text-overflow: '';
}

select[multiple="multiple"] {
	height:auto;
	background-image:none;
	padding:4px;
}

.customer_add {
	margin-top:15px;
}

.dboarditem {
	width: 100%;
	padding:0;
	margin-bottom: 20px;
}

.dboarditemnews {
	border:1px solid #d1d5d8;
}

.dboarditemfull {
	position:relative;
	overflow:hidden;
	width:100%;
	margin-top:10px;
	margin-bottom:10px;
	padding:0;
	border:1px solid #d1d5d8;
}

.dboarditem table,.dboarditemfull table {
	width:100%;
	border:0;
}

.dboarditem th,.dboarditemfull th {
	border-bottom:1px solid #d1d5d8;
	height:25px!important;
	padding:5px 0 5px 8px;
	background-color:#e9edf0;
	font-weight:700;
}

.dboarditem td,.dboarditemfull td {
	border-right:0;
	border-bottom:1px solid #f1f2f3;
	padding:4px 0 4px 8px;
}

.cronjobtask li {
	background-image:url(../img/icons/clock.png);
	background-repeat:no-repeat;
	background-position:0 1px;
	padding-left:18px;
}

.overviewheading {
	vertical-align:top;
	line-height:36px;
	height:36px;
}

.overviewheading h3 {
	display:inline;
}

/* PROGRESS BAR */
.progress {
	height:15px;
	width:150px;
	margin:2px 0 2px 10px;
	overflow:hidden;
	background-color:#f7f7f7;
	-webkit-border-radius:3px;
	-moz-border-radius:3px;
	border-radius:3px;
	-webkit-box-shadow:inset 0 1px 2px rgba(0,0,0,0.1);
	-moz-box-shadow:inset 0 1px 2px rgba(0,0,0,0.1);
	box-shadow:inset 0 1px 2px rgba(0,0,0,0.1);
	text-align:center;
	color:#999;
}

.progress .bar {
	width:1px;
	height:18px;
	font-size:12px;
	color:#fff;
	text-align:center;
	text-shadow:0 -1px 0 rgba(0,0,0,0.25);
	background-color:#0e90d2;
	-webkit-box-shadow:inset 0 -1px 0 rgba(0,0,0,0.15);
	-moz-box-shadow:inset 0 -1px 0 rgba(0,0,0,0.15);
	box-shadow:inset 0 -1px 0 rgba(0,0,0,0.15);
	-webkit-transition:width 6s ease;
	-moz-transition:width 6s ease;
	-ms-transition:width 6s ease;
	-o-transition:width 6s ease;
	transition:width 6s ease;
}

.progress-danger .bar {
	background-color:#dd514c;
}

.maintable {
	width:90%;
}

.update_progess {
	padding:2em;
	text-align:left;
}

.preconfig {
	text-align:left;
	margin-top:20px;
	margin-bottom:5px;
	margin-right:15px;
	margin-left:15px;
}

.preconfigitem {
	padding:.15em;
	border-bottom:1px solid #ccc;
}

.preconfdesc {
	display:block;
	margin-bottom:.5em;
	font-size:120%;
}

.strikethrough {
	text-decoration:line-through;
}

label.nobr {
	display:inline;
	padding:0;
	margin:0 10px 0 0;
}

.scrollup {
	width:40px;
	height:40px;
	opacity:.3;
	position:fixed;
	bottom:50px;
	left:95px;
	display:none;
	text-indent:-9999px;
	background:url(../img/top.png) no-repeat;
}

.nowrap {
	white-space:nowrap;
}
/* ... */

